--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 
 <head>
     <meta charset="utf-8">
@@ -34,13 +34,20 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                 </div>
                 <form th:action="@{/signin}" th:object="${user}" method="post">
-                    <div class="mb-3"><label class="form-label" for="name">Name</label>
-                        <input class="form-control item" type="text" id="name" th:field="*{login}"></div>
-                    <div class="mb-3"><label class="form-label" for="password" >Password</label>
-                        <input class="form-control" type="password" id="password" th:field="*{password}"></div>
                     <div class="mb-3">
-                        <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox"><label class="form-check-label" for="checkbox">Remember me</label></div>
+                        <label class="form-label" for="name">Name</label>
+                        <input class="form-control item" type="text" id="name" th:field="*{login}">
+                        <ul th:if="${#fields.hasErrors('login')}">
+                            <li th:errors="*{login}"> </li>
+                        </ul>
                     </div>
+                    <div class="mb-3"><label class="form-label" for="password" >Password</label>
+                        <input class="form-control" type="password" id="password" th:field="*{password}">
+                        <ul th:if="${#fields.hasErrors('password')}">
+                            <li th:errors="*{password}"> </li>
+                        </ul>
+                    </div>
+
                     <button class="btn btn-primary" type="submit">Войти</button>
                     <a class="btn btn-primary" th:href="@{/signup}" >Зарегистрироваться</a>
                 </form>
